RESOLVED FIXED146508
[GTK] Accelerated Compositing stops working after a web process crash
https://bugs.webkit.org/show_bug.cgi?id=146508
Summary [GTK] Accelerated Compositing stops working after a web process crash
Carlos Garcia Campos
Reported 2015-07-01 03:58:05 PDT
The problem is that we don't send the window ID again to the new web process.
Attachments
Patch (3.39 KB, patch)
2015-07-01 04:00 PDT, Carlos Garcia Campos
mrobinson: review+
Carlos Garcia Campos
Comment 1 2015-07-01 04:00:26 PDT
WebKit Commit Bot
Comment 2 2015-07-01 04:01:38 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3 2015-07-02 00:09:26 PDT
Note You need to log in before you can comment on or make changes to this bug.